--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,221 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+#root{
+  background-color: black;
+}
+/*css do header e nav*/
+#cabecalho{
+  text-indent: 1px;
+  padding: 2px 5px;
+  font-size: 20px;
+  background-color: rgba(250, 39, 2, 0.897);
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#cabecalho > p {
+  text-indent: 5px;
+  font-size: 26px;
+  font-weight: 500;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#linkum, #linkdois{
+  padding-left: 4px;
+  margin-right: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  text-decoration: none;
+  color: rgb(89, 0, 131);
+  transition: 0.2s ease-in-out;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#linkum:hover, #linkdois:hover{
+  color: rgb(255, 255, 255);
+}
+
+/*fim header nav*/
+
+/*inicio main*/
+#mainHome{
+  width: 100%;
+  max-width: 1200px;
+  background-color: white;
+  margin: 0 auto;
+}
+
+#caixacont{
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: auto;
+}
+
+#caixa1{
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 20px;
+}
+
+#caixa1 img{
+
+  max-width: 550px;
+  width: 90%;
+}
+
+#caixa1 p{
+  margin: 1.5em;
+}
+
+#caixa2{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+  text-indent: 6px;
+  margin-top: 20px;
+}
+
+#caixa2 p{
+  padding: .4em;
+}
+
+#caixaimg{
+  width: 90%;
+  margin: auto;
+  transition: ease-in-out;
+}
+
+#caixaimg p {
+  font-weight: bold;
+  justify-self: center;
+  font-size: 24px;
+}
+
+#various{
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+#various img{
+  margin: 1em;
+  width: 28%;
+  max-width: 320px;
+  border-radius: 4px;
+  border: 1px solid black;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+#various img:hover{
+  transform: scale(1.04);
+  box-shadow: 0px 0px 10px rgba(255, 0, 0, 0.527);
+}
+
+#unic{
+  display: flex;
+  flex-direction: column;
+}
+
+#unic div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#unic div img{
+  width: 90%;
+  max-width: 550px;
+  border-radius: 4px;
+  border: 1px solid black;
+  margin: 1em;
+}
+
+#unic div p{
+  width: 90%;
+  max-width: 800px;
+  text-align: center;
+}
+
+#view{
+  padding: .4em;
+  text-align: center;
+}
+
+#unic button{
+  margin: .5em;
+  height: 50px;
+  align-self: center;
+  width: 200px;
+  font-size: 28px;
+  font-weight: bold;
+  background-color: rgb(243, 51, 51);
+  border: 1px solid black;
+  border-radius: 12px;
+  cursor: pointer;
+  transition: 0.4s ease-in-out;
+}
+
+#unic button:hover{
+  transform: scale(1.1);
+  box-shadow: 0px 0px 10px rgba(255, 0, 0, 0.527);
+  background-color: rgb(250, 28, 28);
+}
+
+/*fim main*/
+
+/*Sobre min*/
+
+#mainSobre{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1200px;
+  background-color: white;
+  margin: 0 auto;
+  align-items: center;
+}
+
+#mainSobre h1{
+  margin: .5em;
+}
+
+#mainSobre img{
+  width: 90%;
+  max-width: 500px;
+  border-radius: 4px;
+  border: 1px solid black;
+  margin: 2em;
+}
+
+#mainSobre p{
+  width: 80%;
+  margin: .4em;
+  text-indent: 10px;
+  font-size: 24px;
+}
+
+
+
+/*Fim sobre*/
+
+/*inicio footer*/
+footer{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgba(223, 36, 3, 0.897);
+  height: 80px;
+
 }
 
-.App-link {
-  color: #61dafb;
+footer a{
+  margin: auto;
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+  font-size: 26px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*fim footer*/
