--- a/src/App.css
+++ b/src/App.css
@@ -212,10 +212,14 @@ footer{
 }
 
 footer a{
-  margin: auto;
+  margin: 20px 20px 0px 20px;
   font-weight: bold;
   color: black;
   text-decoration: none;
   font-size: 26px;
+}
+
+footer svg{
+  transform: translateY(5px);
 }
 /*fim footer*/
