--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
   font-size: 24px;
   font-weight: bold;
   text-decoration: none;
-  color: rgb(89, 0, 131);
+  color: rgb(255, 230, 0);
   transition: 0.2s ease-in-out;
 }
 
@@ -57,6 +57,7 @@
   flex-direction: column;
   align-items: center;
   font-size: 20px;
+  padding-top: 10px;
 }
 
 #caixa1 img{
@@ -217,9 +218,36 @@ footer a{
   color: black;
   text-decoration: none;
   font-size: 26px;
+  transition: .2s ease-in-out;
 }
 
 footer svg{
+  transition: .2s ease-in-out;
   transform: translateY(5px);
 }
+
+footer a:hover, svg:hover{
+  color: white;
+}
 /*fim footer*/
+
+@media screen and (max-width: 768px) {
+  #various {
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  #various img{
+    max-width: 500px;
+    width: 90%;
+  }
+
+  footer{
+    height: auto;
+  }
+
+  footer a{
+    padding-top: 20px;
+    margin: .2em;
+  }
+}
