--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   padding: 2px 5px;
   font-size: 20px;
   background-color: rgba(250, 39, 2, 0.897);
-  
+  border: 1px solid rgba(0, 0, 0, 0.384);
 }
 
 #cabecalho > p {
@@ -64,6 +64,8 @@
 
   max-width: 550px;
   width: 90%;
+  border: 1px solid black;
+  border-radius: 4px;
 }
 
 #caixa1 p{
@@ -84,31 +86,40 @@
 }
 
 #caixaimg{
-  width: 90%;
-  margin: auto;
+  width: 100%;
+  
   transition: ease-in-out;
+  padding-bottom: 55px;
 }
 
 #caixaimg p {
   font-weight: bold;
   justify-self: center;
   font-size: 24px;
+  
+}
+
+#view{
+  margin-top: 60px;
 }
 
 #various{
   display: flex;
   width: 100%;
   justify-content: space-around;
+  align-items: center;
 }
 
 #various img{
-  margin: 1em;
-  width: 28%;
-  max-width: 320px;
+  display: block;
+  margin-top: 50px;
+  width: 300px;
+  height: auto;
   border-radius: 4px;
   border: 1px solid black;
   cursor: pointer;
-  transition: 0.5s;
+  transition: .4s ease-in-out;
+  
 }
 
 #various img:hover{
@@ -125,6 +136,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 
 #unic div img{
@@ -209,7 +221,7 @@ footer{
   justify-content: center;
   background-color: rgba(223, 36, 3, 0.897);
   height: 80px;
-
+  border: 1px solid black;
 }
 
 footer a{
@@ -224,6 +236,7 @@ footer a{
 footer svg{
   transition: .2s ease-in-out;
   transform: translateY(5px);
+  margin-right: 15px;
 }
 
 footer a:hover, svg:hover{
@@ -231,10 +244,26 @@ footer a:hover, svg:hover{
 }
 /*fim footer*/
 
+@media screen and (max-width: 992px) {
+  #various{
+    justify-content: center;
+    gap: 20px;
+  }
+
+  #various img{
+    width: 250px;
+  }
+
+  p{
+    font-size: 24px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   #various {
     flex-wrap: wrap;
     flex-direction: row;
+    gap: 20px;
   }
 
   #various img{
